app/css/app.css
/* ... */
details {
    background: transparent;
    padding: 10px;
    margin: 10px 0;
    border-radius: 3px;
    border: 1px solid #ccc;
}

.online {
    color: #468847;
}

.offline {
    color: #903E30;
}

.date_meta div.revision-drop-down {
    position: absolute;
    left: 70px;
    top: 79px;
    height: auto;
    max-height: 60%;
    background: #555;
    text-align: left;
    overflow: auto;
    padding: 0 10px;
    margin: 9px 0px 0px 0px;
    text-transform: lowercase;
    font-size: 12px;
    width: 170px;
}

div.revision-drop-down a p b {
    font-size: 14px;
    font-weight: 700;
}

div.revision-drop-down a p {
    border-bottom: 1px solid #fff;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin-left: 10px;
    color: #ccc;
}

div.revision-drop-down a:hover {
    background: transparent !important;
    border: none !important;
}

div.revision-drop-down a:last-child p {
    border: none;
}

div.revision-drop-down a p:hover {
    color: #fff;
}

.favicon {
    position: relative;
    top: 4px;
    left: 0;
    border: none;
    padding: 10px;
}

a.auth-help {
    background: #555;
    display: block;
    width: 30px;
    height: 30px;
    line-height: 30px;
    border-radius: 50%;
    color: #fff;
    /*box-shadow: 0px -7px 30px #fff;*/
    margin: 0 auto;
    border-bottom: 2px solid #333;
    position: relative;
    font-weight: bold;
}

a.auth-help:hover {
    text-shadow: 0 0 5px #fff;
    border-bottom: none;
    transition: all 0.30s ease-in;
}

a.auth-help:hover div {
    display: block;
    zoom: normal !important;
    font-weight: 100 !important;
    text-shadow: none !important;
}

a.auth-help div {
    font: 100 14px/21px 'trebuchet ms', arial, sans-serif;
    background: #555;
    width: 360px;
    margin: 0 auto;
    text-align: justify;
    position: absolute;
    bottom: 40px;
    right: 50%;
    margin-right: -180px;
    padding: 30px;
    box-shadow: 0px 0px 10px #333;
    display: none;
    opacity: 0.95;
}

a.auth-help div {
    text-align: left;
}

editor > div {
    padding: 5px;
    border-top: 1px dashed #ccc;
    overflow: auto;
}

.ace_status-indicator {
    float: right;
}

input[type="range"] {
    vertical-align: middle;
}

.pointer {
    cursor: pointer;
}

.special-editor-markdown {
    padding: 10px 20px;
}

.editor-btn {
    background: #555;
    border: none;
    border-radius: 5px;
    color: #fff;
    font-size: 12px;
    margin: 0 0 0 5px;
    border: 1px solid #666;
}

.star-switch {
    position: relative;
}

.enterprise-button {
    display: inline-block;
    padding: 5px 20px;
    border: 1px solid #555;
    border-radius: 5px;
    background: -webkit-gradient(linear, left top, left bottom, from(#6b6b6b), to(#555));
    box-shadow: 0px 1px 3px rgba(85, 85, 85, 0.5), inset 0px 0px 1px rgba(255, 255, 255, 0.7);
    color: #ffffff;
    width: 190px;
    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.9), 0px 1px 0px rgba(255, 255, 255, 1);
}

.ace_scrollbar {
    z-index: 3 !important;
}

/*input[type=checkbox].toggle {
    display: none;
}

input[type=checkbox].toggle + label:before {
    content: "\f204";
}

input[type=checkbox].toggle:checked + label:before {
    content: "\f205";
}

input[type=checkbox].toggle:checked + label:before,
input[type=checkbox].toggle + label:before {
    font-family: FontAwesome;
    display: inline-block;
    letter-spacing: 5px;
    font-size: 26px;
    top: 4px;
    position: relative;
    cursor: pointer;
}*/

/*
Toggles by Bandar Raffah from http://codepen.io/BandarRaffah/pen/ibwje
*/

input[type="checkbox"].ios-switch {
    position: absolute;
    opacity: 0;
}
.ios-switch div {
    display:block;
}
/* Normal Track */
input[type="checkbox"].ios-switch + div {
    vertical-align: middle;
    width: 40px;	height: 20px;
    border: 1px solid rgba(0,0,0,.4);
    border-radius: 999px;
    background-color: rgba(0, 0, 0, 0.1);
    -webkit-transition-duration: .4s;
    -webkit-transition-property: background-color, box-shadow;
    box-shadow: inset 0 0 0 0px rgba(0,0,0,0.4);
    margin: 15px 1.2em 15px 2.5em;
}

/* Checked Track (Blue) */
input[type="checkbox"].ios-switch:checked + div {
    width: 40px;
    background-position: 0 0;
    background-color: #3b89ec;
    border: 1px solid #0e62cd;
    box-shadow: inset 0 0 0 10px rgba(59,137,259,1);
}

/* Tiny Track */
input[type="checkbox"].tinyswitch.ios-switch + div {
    width: 34px;
    height: 20px;
    display: inline-block;
    margin: 10px 0px;
}

/* Big Track */
input[type="checkbox"].bigswitch.ios-switch + div {
    width: 50px;	height: 25px;
}

/* Green Track */
input[type="checkbox"].green.ios-switch:checked + div {
    background-color: #00e359;
    border: 1px solid rgba(0, 162, 63,1);
    box-shadow: inset 0 0 0 10px rgba(0,227,89,1);
}

/* Normal Knob */
input[type="checkbox"].ios-switch + div > div {
    float: left;
    width: 18px; height: 18px;
    border-radius: inherit;
    background: #ffffff;
    -webkit-transition-timing-function: cubic-bezier(.54,1.85,.5,1);
    -webkit-transition-duration: 0.4s;
    -webkit-transition-property: transform, background-color, box-shadow;
    -moz-transition-timing-function: cubic-bezier(.54,1.85,.5,1);
    -moz-transition-duration: 0.4s;
    -moz-transition-property: transform, background-color;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px rgba(0, 0, 0, 0.4);
    pointer-events: none;
    margin-top: 1px;
    margin-left: 1px;
}

/* Checked Knob (Blue Style) */
input[type="checkbox"].ios-switch:checked + div > div {
    -webkit-transform: translate3d(20px, 0, 0);
    -moz-transform: translate3d(20px, 0, 0);
    background-color: #ffffff;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px rgba(8, 80, 172,1);
}

/* Tiny Knob */
input[type="checkbox"].tinyswitch.ios-switch + div > div {
    width: 16px; height: 16px;
    margin-top: 1px;
}
/* ... */

